source-code.css
/* ... */
/* Note Details - operation bar */
body .ribbon-button-container > * {
    top: 0;
}
body .ribbon-tab-title .bx,
body .ribbon-button-container .icon-action {
    font-size: 1.2em;
    color: var(--color-text-primary);
    padding: 2px;
}
body .ribbon-button-container .icon-action.bx-history,
body .ribbon-button-container .icon-action.bx-edit-alt {
    padding: 8px;
    margin: 0 4px;
}
body .ribbon-button-container .note-actions,
body .ribbon-button-container .icon-action.bx-history {
    margin: 0 4px;
}
body .ribbon-tab-spacer {
    display: none;
}

/* Note Details - operation bar - hide button */
body .ribbon-tab-title[data-ribbon-component-name="similarNotes"],
body .ribbon-tab-title[data-ribbon-component-name="notePaths"],
body .ribbon-tab-spacer:nth-of-type(8),
body .ribbon-tab-spacer:nth-of-type(12) {
    display: none;
}

/* Note Details - operation bar - hide border */
body .ribbon-tab-title,
body .ribbon-tab-spacer,
body .ribbon-button-container {
    border: none;
}

body .ribbon-tab-title {
    padding: 1px 5px 3px 5px !important;
    box-sizing: border-box;
    border-top: 2px solid transparent;
    margin: 0 4px;
}
body .ribbon-tab-title:hover {
    color: var(--main-text-color);
    background: var(--color-background-primary);
}

body .ribbon-tab-container {
    justify-content: left;
    margin-left: 0;
}
body .image-properties > div {
    margin: 0 !important;
    padding: 8px 12px;
}

body .file-properties-widget {
    padding: 8px 12px;
}
body .file-table {
    margin-top: 0;
}

/* slider */
body .bookmark-switch .slider,
body .protected-note-switch .slider {
    background: var(--color-background-item-active);
}
body .bookmark-switch .slider:before,
body .protected-note-switch .slider:before {
    background: var(--color-background-primary);
}
body .bookmark-switch .slider.checked {
    background: var(--color-background-highlight);
}
body .switch-widget .slider {
    background: var(--color-background-accent);
}
body .switch-widget .slider:before {
    background: var(--color-background-primary);
}

/* Note Details - operation bar */
/*     - hide note id           */
/*     - hide note type         */
body .note-info-widget-table tr > th:first-of-type,
body .note-info-widget-table tr > td:first-of-type {
    display: none;
}

/* Note Details - operation bar                */
/*     - hide map link type switcher button    */
/*     - hide attrs' title when it is activing */
body .map-type-switcher,
body .ribbon-tab-title.active .ribbon-tab-title-label {
    display: none;
}

/* split note button */
body .title-row .bx-dock-right {
    position: absolute;
    bottom: -1px;
    z-index: 10;
    font-size: 1.3em;
    padding: 7px;
}
body .title-row .bx-dock-right:before {
    font-family: 'trilium-allure-icons';
    content: "\e657";
}

/* actived ribbon tab */
body .ribbon-tab-title.active {
    border-bottom: none;
    /*border-top: var(--border-option-active);*/
    background: var(--color-background-primary);
}
/*body .ribbon-tab-title.active .ribbon-tab-title-icon {
    color: var(--color-text-highlight);
}*/
body .ribbon-body {
    max-width: var(--width-note-body);
    min-width: var(--width-note-body);
    margin-left: 0;
}
body .ribbon-body.active {
    /*position: absolute;*/
    background: var(--color-background-primary);
    border: none;
    border-radius: unset;
    /*box-shadow: 3px 6px 12px #d7d7d760;*/
    /*margin-top: 12px;*/
    z-index: 9;
}
body .attribute-list {
    margin-top: 0;
}
body .bx-plus:before {
    font-size: .8em;
}


/* table of content */
body #right-pane {
    padding-right: 8px;
}
body #right-pane .card-header {
    border-radius: 0;
}
body .toc-widget {
    padding: 8px 0;
}
body .toc-widget .toc > ol {
    padding-left: 24px;
}
body .toc-widget .toc li {
    font-size: .8em;
    line-height: 1.6em;
    margin-bottom: 8px;
}

/* share note */
body .shared-info-widget {
    font-weight: normal;
    font-size: .9em;
    line-height: 1.6em;
    border: none !important;
    background: var(--color-background-primary) !important;
    margin: 16px 0px;
    padding: 10px 16px;
}
body .shared-info-widget .shared-link:hover {
    color: var(--color-text-highlight);
}


body .ribbon-container {
    position: fixed;
    bottom: 0;
    background: var(--color-background-secondary);
    padding: 4px 0 4px 42px;
    margin: 0;
    z-index: 9;
    width: 100%;
}
body .ribbon-top-row {
    width: fit-content;
}

body .ribbon-container .bx {
    font-family: 'trilium-allure-icons' !important;
}

/* link map dialog */
body .bx-arrow-to-bottom,
body .bx-arrow-to-top {
    font-size: 1em;
    color: var(--color-text-primary);
}

/*body .bx-arrow-to-bottom:before {
    content: "\e64e";
}
body .bx-arrow-to-top:before {
    content: "\e607";
}*/

/* note body */
/*body .ribbon-container,
body .title-row,
body .split-note-container-widget > .component > .component {
    max-width: var(--width-note-body);
}*/
body .split-note-container-widget > .component {
    overflow: auto;
    margin-bottom: 43px;
    padding: 0 36px;
}

/* table */
body table td,
body table th {
    color: var(--color-text-primary);
}
body .ck-content .table table {
    background: inherit !important;
    border: var(--border-accent);
}
body .ck-content .table table td,
body .ck-content .table table th {
    padding: 8px 12px !important;
    height: unset !important;
    border-color: var(--color-button-accent) !important;
}

/* hr */
body .ck-content hr {
    margin: 48px 64px;
    height: 1px;
    background: var(--color-background-accent);
}


/* blockquote */
body .ck-content blockquote {
    border: none;
    background: var(--color-background-accent);
    padding: 1.2em 1.6em;
    font-style: normal;
    border-radius: var(--border-radius-standard);
    font-size: 14px;
}
/* ... */

